--- a/xgboost/PKGBUILD
+++ b/xgboost/PKGBUILD
@@ -35,7 +35,7 @@ pkgname=(
     xgboost-cuda
     python-xgboost
 )
-pkgver=1.7.4
+pkgver=1.7.6
 pkgrel=1
 arch=('x86_64')
 url='https://github.com/dmlc/xgboost'
@@ -80,7 +80,7 @@ _makedepends_xgboost_cuda=(
     # (which is hardly possible AFAIK), we don't need to put any possible
     # package as dependency of xgboost-cuda as the use of thrust1.15 in rmm
     # doesn't seems to bring any library file dependencies.
-    # As of v22.10 the only library file dependency rmm needs are cudart, libdl
+    # As of v23.06 the only library file dependency rmm needs are cudart, libdl
     # and spdlog. Cudart and libdl are already direct or indirect dependencies
     # of xgboost-cuda. Spdlog brings libfmt.so as a dependency
     'rapids-memory-manager'
@@ -100,7 +100,7 @@ _optdepends_python_xgboost=(
     'python-datatable: for datatable support'
     'python-graphviz: for plotting support'
     'python-matplotlib: for plotting support'
-    # Note: as of date 2022-11-03 `aur/python-pyspark` is missing its required
+    # Note: as of date 2023-06-23 `aur/python-pyspark` is missing its required
     # dependency `python-py4j`
     'python-pyspark: for pyspark support'
     'python-cloudpickle: for pyspark support'
@@ -108,6 +108,9 @@ _optdepends_python_xgboost=(
 makedepends=(
     'cmake'
     'python-setuptools'
+    # Future releases of xgboost will use `pyproject.toml` and `hatchling` to
+    # build python package. Be prepared.
+    #'python-hatchling>=1.12.1'
     
     "${_dependsbase[@]}"
     "${_depends_xgboost_cuda[@]}"
@@ -119,7 +122,7 @@ makedepends=(
 # `xgboost-debug` package but no `xgboost-cuda-debug` package. Does it mean
 # something?
 options=(!debug)
-_dmlc_core_tag='dfd9365264a060a5096734b7d892e1858b6d2722'
+_dmlc_core_tag='81db539486ce6525b31b971545edffee2754aced'
 _cub_tag='af39ee264f4627608072bf54730bf3a862e56875'
 _gputreeshap_tag='787259b412c18ab8d5f24bf2b8bd6a59ff8208f3'
 source=(
@@ -139,8 +142,8 @@ source=(
     'dmlc_core-0001-disable_hdfs_static.patch'
     'dmlc_core-0002-fix_azure_storage_build.patch'
 )
-sha256sums=('bedf9b61564c80f28a7ca8e74d71357539b6c81a0e5a548db10a48530a07424a'
-            'd8c8a9ae75994af6b1e78f3ed5fd8bcb62068dadbc1487ab9ce589ee36a69c95'
+sha256sums=('20acbdc04e5c724884788a51abbc400fc0d8497ae6cb5b404fef4e0d32fe1a0e'
+            'e618fdd5703c4e2048a367d687cf35dd6186904d895c4f0138678f8df0b5fce4'
             'cc626e006aa6ce961ddd8e82d97d5fc358c585fb27d3f8f1759efe9467f851b4'
             'cc0f7c1a3fd5fe1f9dcedcf959c923af4275ab6a8b1d07ea405af014ca6b371c'
             'ae7cc490448dd80a70a24ce1bb5db689c8d4ca28d9c4be93fe54082fb7a6fdf6'
@@ -180,7 +183,7 @@ prepare() {
 
 build() {
     _common_env=(
-        HADOOP_HDFS_HOME=/usr/lib/hadoop-3.3.4
+        HADOOP_HDFS_HOME=/usr/lib/hadoop-3.3.5
         HADOOP_WORKERS=/etc/hadoop/workers
         JAVA_HOME=/usr/lib/jvm/default
     )
@@ -228,6 +231,16 @@ build() {
         -DPLUGIN_RMM=ON # Default is OFF
         -DPLUGIN_FEDERATED=ON # Default is OFF
         -DThrust_ROOT=/opt/thrust-rapidsai
+        # As of 2023-06-23 the latest protobuf build in Archlinux specifies
+        # `CMAKE_BUILD_TYPE` as `NONE` while the upstream protobuf cmake config
+        # reads protoc executable location from `IMPORTED_LOCATION_NOCONFIG`.
+        # What a mess..
+        # It seems upstream protobuf will not overwrite cflags anc cxxflags
+        # when omitting `CMAKE_BUILD_TYPE`, and the generated cmake config file
+        # will be named with `-noconfig.cmake` suffix, since that's what CMake
+        # will choose for the name of the config when build type is omitted.
+        # Anyway...
+        -DProtobuf_PROTOC_EXECUTABLE=/usr/bin/protoc
     )
 
     # For aur/hadoop, adding `--as-needed` in LDFLAGS will cause libxgboost.so
@@ -285,5 +298,6 @@ package_python-xgboost() {
 
     cd "${srcdir}/${pkgbase}-${pkgver}/python-package"
     python setup.py install --root="${pkgdir}" --optimize=1 --use-system-libxgboost
+    #pip install -v . --config-settings use_system_libxgboost=True #--config-settings optimize=True
     install -Dm644 "${srcdir}/${pkgbase}-${pkgver}/LICENSE" "${pkgdir}/usr/share/licenses/${_pkgname}/LICENSE"
 }
