--- a/hadoop-xgboost/PKGBUILD
+++ b/hadoop-xgboost/PKGBUILD
@@ -14,7 +14,7 @@
 set -u
 _pkgbasename=hadoop
 pkgname=${_pkgbasename}-xgboost
-pkgver=3.3.5
+pkgver=3.3.6
 pkgrel=1
 pkgdesc='An open-source software for reliable, scalable, distributed computing (built for xgboost)'
 arch=('i686' 'x86_64')
@@ -34,15 +34,19 @@ source=(
     "${_pkgbasename}-namenode.service"
     "${_pkgbasename}-resourcemanager.service"
     "${_pkgbasename}-secondarynamenode.service"
+    "0001-hadoop-hdfs-native-client_fix_protobuf_with_abseil.patch"
+    "0002-hadoop-yarn-project_fix_node_version.patch"
 )
-sha256sums=('004008d5b730253f20b28443c0aa4c38554ee20c58cf954b0512e6453ef91fbf'
+sha256sums=('6da5348334de7ebe6e85bae559d3e42fab56f9c155648912b6212e191c713323'
             '86adb9d28c5240023950339943e8d63bee91a99a18431699a8fb4839ee2a3b61'
             'f9495f39dfdda1b976ad26c5973f65755f086690cf4cfc9eee33060aac8205d2'
             'c6834f1355a0c40c7ccb6ac8813637ec78de05835015665cd9ed1f6d0470e716'
             'b0d28212273e24409659c195ce57793c3ce536683559be13dd4a00d72ca01913'
             '9e16d9a3ebb7a08c1a00083c9a6de6e93f17f4c7911f1e5a8f7630fa42f6fcd7'
             'f8d2f186fa14a5f8a81434eeac52b20b5f1d5dd9a3d4fd845490b8cb0bba7e73'
-            '33c60198c2982a2d05a148f89c7722efcb571b04ea8e971715e107d150e4dbb8')
+            '33c60198c2982a2d05a148f89c7722efcb571b04ea8e971715e107d150e4dbb8'
+            'cd8bc813ebe6ba226691c97b8571903208b93fce072b4b0eabdc1109b71d76e8'
+            '6dc62a2d1b3b2eb4b6a2f78f4282d5aa4f01af5b3e68dd377a12d2a37195121c')
 install=${pkgname}.install
 backup=(
     "etc/conf.d/${_pkgbasename}"
@@ -72,6 +76,12 @@ backup=(
     "etc/${_pkgbasename}/yarnservice-log4j.properties"
     "etc/${_pkgbasename}/yarn-site.xml"
 )
+
+prepare() {
+    cd "${srcdir}/${_pkgbasename}-rel-release-${pkgver}"
+    patch -i "${srcdir}/0001-hadoop-hdfs-native-client_fix_protobuf_with_abseil.patch" -p1
+    patch -i "${srcdir}/0002-hadoop-yarn-project_fix_node_version.patch" -p1
+}
 
 build() {
     export CXXFLAGS="${CXXFLAGS} -include cstdint"
