--- a/hadoop-xgboost/PKGBUILD
+++ b/hadoop-xgboost/PKGBUILD
@@ -11,20 +11,35 @@
 # jar files even if those jar files relies on java-runtime-headless-openjdk
 # only. Should we open an issue for namcap?
 
+# Built with:
+# ```
+# extra-x86_64-build \
+#   -- \
+#   -I /var/cache/pacman/pkg/jdk11-openjdk-11.0.22.u7-1-x86_64.pkg.tar.zst \
+#   -I ~/workspace/AGR_private/proxy-config/proxy-config-1.0.0-1-x86_64.pkg.tar.zst \
+#   -- \
+#   http_proxy=http://127.0.0.1:1081 \
+#   https_proxy=http://127.0.0.1:1081
+# ```
+
+# TODO: handle namcap "lacks GNU_PROPERTY_X86_FEATURE_1_SHSTK" warning
+# Possible ref:
+# https://gitlab.archlinux.org/pacman/namcap/-/issues/72#note_159383
+
 set -u
 _pkgbasename=hadoop
 pkgname=${_pkgbasename}-xgboost
-pkgver=3.3.6
+pkgver=3.4.0
 pkgrel=1
 pkgdesc='An open-source software for reliable, scalable, distributed computing (built for xgboost)'
 arch=('i686' 'x86_64')
 url='https://hadoop.apache.org'
-license=('apache')
+license=('Apache-2.0')
 provides=("${_pkgbasename}")
 # `provides` and `conflicts` are two different options
 conflicts=("${_pkgbasename}")
-makedepends=('cmake' 'gcc' 'java-environment<=11' 'make' 'maven')
-depends=('inetutils' 'java-runtime-headless-openjdk=11' 'openssh' 'protobuf')
+makedepends=('cmake' 'gcc' 'java-environment<=11' 'make' 'maven' 'boost')
+depends=('inetutils' 'java-runtime-headless-openjdk=11' 'openssh' 'protobuf' 'boost-libs')
 source=(
     "https://github.com/apache/${_pkgbasename}/archive/refs/tags/rel/release-${pkgver}.tar.gz"
     "${_pkgbasename}-conf"
@@ -34,10 +49,11 @@ source=(
     "${_pkgbasename}-namenode.service"
     "${_pkgbasename}-resourcemanager.service"
     "${_pkgbasename}-secondarynamenode.service"
-    "0001-hadoop-hdfs-native-client_fix_protobuf_with_abseil.patch"
-    "0002-hadoop-yarn-project_fix_node_version.patch"
+	"0001-hadoop-hdfs-native-client_fix_protobuf_with_abseil.patch"
+	"0002-hadoop-hdfs-native-client_workaround_for_check_symbol_exists_failure.patch"
+	"0003-hadoop-hdfs-native-client_remove_tests_that_is_conflict_with_newer_versions_of_protobuf.patch"
 )
-sha256sums=('6da5348334de7ebe6e85bae559d3e42fab56f9c155648912b6212e191c713323'
+sha256sums=('4819f52408c8b3a8ea22582dbf1b07adfdec3e582faa632501b44ba169349b04'
             '86adb9d28c5240023950339943e8d63bee91a99a18431699a8fb4839ee2a3b61'
             'f9495f39dfdda1b976ad26c5973f65755f086690cf4cfc9eee33060aac8205d2'
             'c6834f1355a0c40c7ccb6ac8813637ec78de05835015665cd9ed1f6d0470e716'
@@ -45,8 +61,9 @@ sha256sums=('6da5348334de7ebe6e85bae559d3e42fab56f9c155648912b6212e191c713323'
             '9e16d9a3ebb7a08c1a00083c9a6de6e93f17f4c7911f1e5a8f7630fa42f6fcd7'
             'f8d2f186fa14a5f8a81434eeac52b20b5f1d5dd9a3d4fd845490b8cb0bba7e73'
             '33c60198c2982a2d05a148f89c7722efcb571b04ea8e971715e107d150e4dbb8'
-            'cd8bc813ebe6ba226691c97b8571903208b93fce072b4b0eabdc1109b71d76e8'
-            '6dc62a2d1b3b2eb4b6a2f78f4282d5aa4f01af5b3e68dd377a12d2a37195121c')
+            'a07253e083851370894fc952e5483ab9fd0fafdb5f402bc7ffb2af37aa6ad0ba'
+            'e1b334a8b5a98352763838631d4b9829998dab83df3a8c238baaba97690490ff'
+            'c5ae83732f9a354be2c5b030cc745b1e83ac6f377414103ac2553e3e5537bd9a')
 install=${pkgname}.install
 backup=(
     "etc/conf.d/${_pkgbasename}"
@@ -73,14 +90,15 @@ backup=(
     "etc/${_pkgbasename}/mapred-site.xml"
     "etc/${_pkgbasename}/workers"
     "etc/${_pkgbasename}/yarn-env.sh"
-    "etc/${_pkgbasename}/yarnservice-log4j.properties"
     "etc/${_pkgbasename}/yarn-site.xml"
+	"etc/${_pkgbasename}/yarnservice-log4j.properties"
 )
 
 prepare() {
     cd "${srcdir}/${_pkgbasename}-rel-release-${pkgver}"
-    patch -i "${srcdir}/0001-hadoop-hdfs-native-client_fix_protobuf_with_abseil.patch" -p1
-    patch -i "${srcdir}/0002-hadoop-yarn-project_fix_node_version.patch" -p1
+	patch -i "${srcdir}/0001-hadoop-hdfs-native-client_fix_protobuf_with_abseil.patch" -p1
+	patch -i "${srcdir}/0002-hadoop-hdfs-native-client_workaround_for_check_symbol_exists_failure.patch" -p1
+	patch -i "${srcdir}/0003-hadoop-hdfs-native-client_remove_tests_that_is_conflict_with_newer_versions_of_protobuf.patch" -p1
 }
 
 build() {
